samples/_failures_safe/1761663335_27c395_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae153745.c: In function ‘main’:
./samples/SAFE/__tmp_ae153745.c:174:5: error: expected declaration or statement at end of input
  174 |     while (1) {
      |     ^~~~~
./samples/SAFE/__tmp_ae153745.c:174:5: error: expected declaration or statement at end of input
